--- a/univ_fest_host/ios/Runner/Info.plist
+++ b/univ_fest_host/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Using for reading QR Code</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Using for reading QR Code</string>
 </dict>
 </plist>
