--- a/univ_fest_host/android/app/build.gradle
+++ b/univ_fest_host/android/app/build.gradle
@@ -38,7 +38,7 @@ android {
         applicationId = "com.example.univ_fest_host"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdk = flutter.minSdkVersion
+        minSdk = 21
         targetSdk = flutter.targetSdkVersion
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
