--- a/univ_fest_host/android/app/src/main/AndroidManifest.xml
+++ b/univ_fest_host/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="univ.fest.host">
     <application
         android:label="univ_fest_host"
         android:name="${applicationName}"
