--- a/univ_fest_host/ios/Runner/Info.plist
+++ b/univ_fest_host/ios/Runner/Info.plist
@@ -20,6 +20,22 @@
 	<string>$(FLUTTER_BUILD_NAME)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>GIDClientID</key>
+	<string>327456366591-kmsdhvmq444okts3205lc8tbl7aqdno1.apps.googleusercontent.com</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.327456366591-kmsdhvmq444okts3205lc8tbl7aqdno1</string>
+			</array>
+		</dict>
+	</array>
+	<key>GIDServerClientID</key>
+	<string>327456366591-kmsdhvmq444okts3205lc8tbl7aqdno1.apps.googleusercontent.com</string>
+	
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
