--- a/univ_fest_host/pubspec.yaml
+++ b/univ_fest_host/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   firebase_core: ^3.1.0
   cloud_firestore: ^5.0.1
+  mobile_scanner: ^5.1.1
 
 dev_dependencies:
   flutter_test:
