--- a/univ_fest_host/pubspec.yaml
+++ b/univ_fest_host/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_auth: ^5.1.1
   riverpod: ^2.5.1
   google_sign_in: ^6.2.1
+  mobile_scanner: ^5.1.1
 
 dev_dependencies:
   flutter_test:
