--- a/univ_fest_host/pubspec.yaml
+++ b/univ_fest_host/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   firebase_auth: ^5.1.1
   riverpod: ^2.5.1
   google_sign_in: ^6.2.1
+  image_picker: ^1.1.2
+  firebase_storage: ^12.1.0
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
