--- a/univ_fest_host/pubspec.yaml
+++ b/univ_fest_host/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   image_picker: ^1.1.2
   firebase_storage: ^12.1.0
   cached_network_image: ^3.3.1
+  firebase_app_check: ^0.3.0+3
 
 dev_dependencies:
   flutter_test:
