--- a/univ_fest_host/pubspec.yaml
+++ b/univ_fest_host/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   riverpod: ^2.5.1
   google_sign_in: ^6.2.1
   mobile_scanner: ^5.1.1
+  firebase_storage: ^12.1.1
+  firebase_app_check: ^0.3.0+3
 
 dev_dependencies:
   flutter_test:
