--- a/univ_fest_host/pubspec.yaml
+++ b/univ_fest_host/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   mobile_scanner: ^5.1.1
   firebase_storage: ^12.1.1
   firebase_app_check: ^0.3.0+3
+  image_picker: ^1.1.2
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
