--- a/univ_fest_host/counter_firebase/ios/Flutter/Generated.xcconfig
+++ b/univ_fest_host/counter_firebase/ios/Flutter/Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
 FLUTTER_ROOT=C:\Users\blast\Documents\flutter
-FLUTTER_APPLICATION_PATH=C:\Users\blast\Documents\flutterApp\univ_fest_host\univ_fest_host\counter_firebase
+FLUTTER_APPLICATION_PATH=C:\Users\blast\Documents\UEC\iCCD\univ_fest_host\univ_fest_host\counter_firebase
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
